# AnsiToImg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCS.md  README.md  foo.py  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: README.md  ansirep.md  readme.md  render.md  utils.md
DOCS/ansitoimg/: ansirep.md  index.md  module.md  render.md  utils.md
ansitoimg/: __init__.py  __main__.py  ansirep.py  onedark.yml  render.py  utils.py
documentation/help/: README.md
documentation/reference/: MODULES.md  README.md
documentation/reference/ansitoimg/: ansirep.md  index.md  module.md  render.md  utils.md
documentation/tutorials/: README.md  cli.md  module.md
test/: example.html  example2.html  example3.html  example4.html  example4.txt  test.py
tests/: simpletest.py  test_render.py
tests/data/: cat.html  cat.txt  fancyHelloWorld.html  fancyHelloWorld.txt  fredHappyfaceHD.html  fredHappyfaceHD.txt  fredHappyfaceHD_expected.html  metprintOutput.html  metprintOutput.txt
