[tool.poetry]
name = "ansitoimg"
version = "2022"
license = "mit"
description = "Convert an ANSI string to an image. Great for adding terminal output into a readme."
authors = ["FredHappyface"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/AnsiToImg"
repository = "https://github.com/FHPythonUtils/AnsiToImg"
documentation = "https://github.com/FHPythonUtils/AnsiToImg/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
svgwrite = "<2,>=1.4.1"
PyYAML = "<7,>=6.0"
Pillow = "<10,>=9.0.0"
pyppeteer = "<2,>=1.0.2"
MarkupSafe = "<3,>=2.0.1"


[tool.poetry.scripts]
ansitoimg = 'ansitoimg:cli'

[tool.poetry.dev-dependencies]
catimage = "^2022"
pytest = "^7.1.1"
imgcompare = "^2.0.1"
pylint = "^2.13.5"
handsdown = "^1.1.0"

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-patterns = "test_.*?py"

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = [
	"pointless-string-statement",
	"superfluous-parens",
	"bad-continuation"
]
