[tool.poetry]
name = "ansitoimg"
version = "2024.1"
license = "mit"
description = "Convert an ANSI string to an image. Great for adding terminal output into a readme."
authors = ["FredHappyface"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/AnsiToImg"
repository = "https://github.com/FHPythonUtils/AnsiToImg"
documentation = "https://github.com/FHPythonUtils/AnsiToImg/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
PyYAML = "<7,>=6.0.1"
rich = "<14,>=13.7.0"
install-playwright = "<2,>=0.0.1"
playwright = "<2,>=1.40.0"


[tool.poetry.scripts]
ansitoimg = 'ansitoimg:cli'

[tool.poetry.group.dev.dependencies]
imgcompare = "^2.0.1"
pytest = "^7.4.4"
pylint = "^3.0.3"
handsdown = "^2.1.0"
coverage = "^7.4.0"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-paths = ["tests"]

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = ["pointless-string-statement", "superfluous-parens"]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39
	py38

[testenv]
deps =
	pytest
	imgcompare
commands = pytest tests
"""
